@@ -2,9 +2,13 @@ package com.example.taskmanagement.controller;
 
 import com.example.taskmanagement.model.Task;
 import com.example.taskmanagement.repository.TaskRepository;
+import io.restassured.http.ContentType;
 import io.restassured.response.Response;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.openapitools.model.ErrorResponse;
+import org.openapitools.model.ErrorResponseErrorsInner;
+import org.openapitools.model.TaskRequest;
 import org.openapitools.model.TaskResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -13,7 +17,7 @@ import java.time.LocalDate;
 import java.util.List;
 
 import static io.restassured.RestAssured.given;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.springframework.boot.test.context.SpringBootTest.WebEnvironment.DEFINED_PORT;
 
 @SpringBootTest(webEnvironment = DEFINED_PORT)
@@ -56,17 +60,17 @@ public class TaskControllerIT {
 
         assertEquals(2, responseList.size());
 
-        TaskResponse taskResponse1 = responseList.get(0);
+        TaskResponse taskResponse1 = responseList.getFirst();
         assertEquals("Task 1", taskResponse1.getTitle());
         assertEquals("Description for Task 1", taskResponse1.getDescription());
         assertEquals(LocalDate.now().plusDays(5), taskResponse1.getDueDate());
-        assertEquals(true, taskResponse1.getCompleted());
+        assertEquals(false, taskResponse1.getCompleted());
 
-        TaskResponse taskResponse2 = responseList.get(1);
+        TaskResponse taskResponse2 = responseList.getLast();
         assertEquals("Task 2", taskResponse2.getTitle());
         assertEquals("Description for Task 2", taskResponse2.getDescription());
         assertEquals(LocalDate.now().plusDays(10), taskResponse2.getDueDate());
-        assertEquals(false, taskResponse2.getCompleted());
+        assertEquals(true, taskResponse2.getCompleted());
     }
 
     @Test
@@ -77,7 +81,7 @@ public class TaskControllerIT {
         task.setDueDate(LocalDate.now().plusDays(5));
         task.setCompleted(false);
 
-        taskRepository.save(task);
+        task = taskRepository.save(task);
 
         Response response = given()
                 .when()
@@ -93,64 +97,270 @@ public class TaskControllerIT {
         assertEquals("Task 1", taskResponse.getTitle());
         assertEquals("Description for Task 1", taskResponse.getDescription());
         assertEquals(LocalDate.now().plusDays(5), taskResponse.getDueDate());
-        assertEquals(true, taskResponse.getCompleted());
+        assertEquals(false, taskResponse.getCompleted());
     }
 
     @Test
     public void givenTaskDoesNotExist_whenGetTaskById_thenReturnNotFound() {
+        Long nonExistentTaskId = 999L;
 
+        Response response = given()
+                .when()
+                .get("/tasks/{id}", nonExistentTaskId)
+                .then()
+                .statusCode(404)
+                .extract()
+                .response();
+
+        ErrorResponse errorResponse = response.as(ErrorResponse.class);
+
+        assertEquals("Resource not found", errorResponse.getMessage());
+        assertTrue(errorResponse.getErrors().isEmpty());
     }
 
     // Tests for Creating a New Task
 
     @Test
     public void givenValidTaskRequest_whenCreateTask_thenReturnCreatedTask() {
+        TaskRequest taskRequest = new TaskRequest();
+        taskRequest.setTitle("New Task");
+        taskRequest.setDescription("This is a new task description");
+        taskRequest.setDueDate(LocalDate.now().plusDays(7));
 
+        Response response = given()
+                .contentType(ContentType.JSON)
+                .body(taskRequest)
+                .when()
+                .post("/tasks")
+                .then()
+                .statusCode(201)
+                .extract()
+                .response();
+
+        TaskResponse taskResponse = response.as(TaskResponse.class);
+
+        assertNotNull(taskResponse.getId());
+        assertEquals("New Task", taskResponse.getTitle());
+        assertEquals("This is a new task description", taskResponse.getDescription());
+        assertEquals(LocalDate.now().plusDays(7), taskResponse.getDueDate());
+        assertEquals(false, taskResponse.getCompleted());
     }
 
     @Test
     public void givenInvalidTaskRequest_whenCreateTask_thenReturnBadRequest() {
+        TaskRequest invalidTaskRequest = new TaskRequest();
+        invalidTaskRequest.setDescription("This task has no title");
+        invalidTaskRequest.setDueDate(null);
 
+        Response response = given()
+                .contentType(ContentType.JSON)
+                .body(invalidTaskRequest)
+                .when()
+                .post("/tasks")
+                .then()
+                .statusCode(400)
+                .extract()
+                .response();
+
+        ErrorResponse errorResponse = response.as(ErrorResponse.class);
+
+        assertEquals("Validation failed", errorResponse.getMessage());
+
+        List<ErrorResponseErrorsInner> errors = errorResponse.getErrors();
+
+        assertEquals(1, errors.size());
+
+        assertEquals("title", errors.get(0).getField());
+        assertEquals("must not be null", errors.get(0).getMessage());
     }
 
     // Tests for Updating a Task
 
     @Test
     public void givenTaskExists_whenUpdateTask_thenReturnUpdatedTask() {
+        Task task = new Task();
+        task.setTitle("Original Task");
+        task.setDescription("Original description");
+        task.setDueDate(LocalDate.now().plusDays(5));
+        task.setCompleted(false);
 
+        task = taskRepository.save(task);
+
+        TaskRequest updatedTaskRequest = new TaskRequest();
+        updatedTaskRequest.setTitle("Updated Task");
+        updatedTaskRequest.setDescription("Updated description");
+        updatedTaskRequest.setDueDate(LocalDate.now().plusDays(10));
+
+        Response response = given()
+                .contentType(ContentType.JSON)
+                .body(updatedTaskRequest)
+                .when()
+                .put("/tasks/{id}", task.getId())
+                .then()
+                .statusCode(200)
+                .extract()
+                .response();
+
+        TaskResponse taskResponse = response.as(TaskResponse.class);
+
+        assertEquals(task.getId(), taskResponse.getId());
+
+        assertEquals("Updated Task", taskResponse.getTitle());
+        assertEquals("Updated description", taskResponse.getDescription());
+        assertEquals(LocalDate.now().plusDays(10), taskResponse.getDueDate());
+        assertEquals(false, taskResponse.getCompleted());
     }
 
     @Test
     public void givenTaskDoesNotExist_whenUpdateTask_thenReturnNotFound() {
+        Long nonExistentTaskId = 999L;
 
+        TaskRequest updatedTaskRequest = new TaskRequest();
+        updatedTaskRequest.setTitle("Updated Task");
+        updatedTaskRequest.setDescription("Updated description");
+        updatedTaskRequest.setDueDate(LocalDate.now().plusDays(10));
+
+        Response response = given()
+                .contentType(ContentType.JSON)
+                .body(updatedTaskRequest)
+                .when()
+                .put("/tasks/{id}", nonExistentTaskId)
+                .then()
+                .statusCode(404)
+                .extract()
+                .response();
+
+        ErrorResponse errorResponse = response.as(ErrorResponse.class);
+
+        assertEquals("Resource not found", errorResponse.getMessage());
+        assertTrue(errorResponse.getErrors().isEmpty());
     }
 
     @Test
     public void givenInvalidTaskUpdateRequest_whenUpdateTask_thenReturnBadRequest() {
+        Task task = new Task();
+        task.setTitle("Original Task");
+        task.setDescription("Original description");
+        task.setDueDate(LocalDate.now().plusDays(5));
+        task.setCompleted(false);
 
+        task = taskRepository.save(task);
+
+        TaskRequest invalidTaskRequest = new TaskRequest();
+        invalidTaskRequest.setDescription("Updated description");
+        invalidTaskRequest.setDueDate(LocalDate.now().minusDays(1));
+
+        Response response = given()
+                .contentType(ContentType.JSON)
+                .body(invalidTaskRequest)
+                .when()
+                .put("/tasks/{id}", task.getId())
+                .then()
+                .statusCode(400)
+                .extract()
+                .response();
+
+        ErrorResponse errorResponse = response.as(ErrorResponse.class);
+
+        assertEquals("Validation failed", errorResponse.getMessage());
+
+        List<ErrorResponseErrorsInner> errors = errorResponse.getErrors();
+
+        assertFalse(errors.isEmpty());
+        assertEquals("title", errors.get(0).getField());
+        assertEquals("must not be null", errors.get(0).getMessage());
     }
 
     // Tests for Deleting a Task
 
     @Test
     public void givenTaskExists_whenDeleteTask_thenReturnNoContent() {
+        Task task = new Task();
+        task.setTitle("Task to be deleted");
+        task.setDescription("Description for the task to be deleted");
+        task.setDueDate(LocalDate.now().plusDays(5));
+        task.setCompleted(false);
 
+        task = taskRepository.save(task);
+
+        given()
+                .contentType(ContentType.JSON)
+                .when()
+                .delete("/tasks/{id}", task.getId())
+                .then()
+                .statusCode(204);
+
+        boolean taskExists = taskRepository.existsById(task.getId());
+        assertFalse(taskExists, "Task should be deleted from the repository");
     }
 
     @Test
     public void givenTaskDoesNotExist_whenDeleteTask_thenReturnNotFound() {
+        Long nonExistentTaskId = 999L;
 
+        Response response = given()
+                .contentType(ContentType.JSON)
+                .when()
+                .delete("/tasks/{id}", nonExistentTaskId)
+                .then()
+                .statusCode(404)
+                .extract()
+                .response();
+
+        ErrorResponse errorResponse = response.as(ErrorResponse.class);
+
+        assertEquals("Resource not found", errorResponse.getMessage());
+
+        assertTrue(errorResponse.getErrors().isEmpty());
     }
 
     // Tests for Marking a Task as Completed
 
     @Test
     public void givenTaskExists_whenMarkTaskAsCompleted_thenReturnCompletedTask() {
+        Task task = new Task();
+        task.setTitle("Task to be marked as completed");
+        task.setDescription("Description for the task to be completed");
+        task.setDueDate(LocalDate.now().plusDays(5));
+        task.setCompleted(false);
 
+        task = taskRepository.save(task);
+
+        Response response = given()
+                .contentType(ContentType.JSON)
+                .when()
+                .patch("/tasks/{id}/complete", task.getId())
+                .then()
+                .statusCode(200)
+                .extract()
+                .response();
+
+        TaskResponse taskResponse = response.as(TaskResponse.class);
+
+        assertEquals(task.getId(), taskResponse.getId());
+
+        assertTrue(taskResponse.getCompleted());
+        assertEquals("Task to be marked as completed", taskResponse.getTitle());
+        assertEquals("Description for the task to be completed", taskResponse.getDescription());
+        assertEquals(LocalDate.now().plusDays(5), taskResponse.getDueDate());
     }
 
     @Test
     public void givenTaskDoesNotExist_whenMarkTaskAsCompleted_thenReturnNotFound() {
+        Long nonExistentTaskId = 999L;
 
+        Response response = given()
+                .contentType(ContentType.JSON)
+                .when()
+                .patch("/tasks/{id}/complete", nonExistentTaskId)
+                .then()
+                .statusCode(404)
+                .extract()
+                .response();
+
+        ErrorResponse errorResponse = response.as(ErrorResponse.class);
+
+        assertEquals("Resource not found", errorResponse.getMessage());
+        assertTrue(errorResponse.getErrors().isEmpty());
     }
 }
